# open-webui

./: .dockerignore  AGENTS.md  DESIGN.md  Dockerfile  Makefile  PRODUCT.md  local-compose.env  local-compose.env.example  pyproject.toml  rebuild.md
rebuild/: .dockerignore  .gitattributes  .gitignore  .prettierignore  Dockerfile  Makefile  README.md  eslint.config.js  package-lock.json  package.json  playwright-ct.config.ts  playwright.config.ts  pyproject.toml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
rebuild/.buildkite/: rebuild.yml
rebuild/backend/: .env.example  alembic.ini
rebuild/backend/alembic/: env.py
rebuild/backend/alembic/versions/: 0001_baseline.py  0002_m2_chat_folder.py  0003_m3_sharing.py
rebuild/backend/app/: asgi.py  main.py
rebuild/backend/app/core/: auth.py  config.py  constants.py  db.py  deps.py  errors.py  iam_auth.py  ids.py  logging.py  time.py
rebuild/backend/app/db/: base.py  migration_helpers.py
rebuild/backend/app/models/: __init__.py  chat.py  folder.py  shared_chat.py  user.py
rebuild/backend/app/providers/: openai.py
rebuild/backend/app/routers/: agents.py  chats.py  folders.py  health.py  me.py  models.py  shares.py
rebuild/backend/app/schemas/: _base.py  agent.py  chat.py  folder.py  history.py  model.py  share.py  user.py
rebuild/backend/app/services/: agents_cache.py  chat_stream.py  chat_title.py  chat_writer.py  folders.py  models_cache.py  stream_registry.py
rebuild/backend/tests/: conftest.py  llm_mock.py  test_auth.py  test_constants.py  test_health.py  test_iam_auth.py  test_ids.py  test_migrations.py  test_no_bare_depends.py  test_settings.py  test_strict_model.py  test_time.py
rebuild/backend/tests/fixtures/llm/: 2d608ece902879ff.sse  39ccf63a95ee42f7.sse  3ca44c87232b7da0.sse  3dd4bd9c83f2ab9a.sse  4acfc6b0c6329570.sse  5ddf73264ec8b887.sse  96231776c87e0fbe.sse  README.md
rebuild/backend/tests/integration/: __init__.py  conftest.py  test_agents_cache.py  test_chat_writer.py  test_chats_crud.py  test_folders_crud.py  test_models_cache.py  test_rotation.py  test_shares.py  test_stream_registry_cross_pod.py  test_streaming.py  test_theming_no_db.py
rebuild/backend/tests/unit/: __init__.py  test_agents_cache.py  test_chat_title.py  test_history_tree.py  test_models_cache.py  test_provider.py  test_snapshot.py  test_sse.py  test_token.py
rebuild/docs/best-practises/: FastAPI-best-practises.md  database-best-practises.md  svelte-best-practises.md  sveltekit-best-practises.md  visual-qa-best-practises.md
rebuild/docs/plans/: PLAN-TEMPLATE.md  feature-llm-models.md  m0-foundations.md  m1-theming.md  m2-conversations.md  m3-sharing.md  m4-channels.md  m5-automations.md  m6-hardening.md
rebuild/frontend/playwright/: index.css  index.html  index.ts  sveltekit-env-stubs.ts  sveltekit-stubs.ts
rebuild/frontend/src/: ambient.d.ts  app.css  app.d.ts  app.html  hooks.server.ts
rebuild/frontend/src/lib/: env.ts
rebuild/frontend/src/lib/api/: client.ts
rebuild/frontend/src/lib/markdown/: codeblock.ts
rebuild/frontend/src/lib/msw/: browser.ts  handlers.ts  node.ts
rebuild/frontend/src/lib/stores/: active-chat.svelte.ts  agents.svelte.ts  chats.svelte.ts  folders.svelte.ts  models.svelte.ts  theme.svelte.ts  toast.svelte.ts
rebuild/frontend/src/lib/theme/: boot.ts  mermaid.ts  persistence.ts  presets.ts  shiki.ts  tokens.css  vite-emit-tokens.ts
rebuild/frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
rebuild/frontend/tests/: globalSetup.ts
rebuild/frontend/tests/component/: LayoutHarness.svelte  Markdown.spec.ts  MarkdownHarness.svelte  Message.spec.ts  MessageHarness.svelte  MessageInput.spec.ts  MessageInputHarness.svelte  ShareModal-geometry.spec.ts  ShareModalHarness.svelte  SharedView-geometry.spec.ts  SharedViewHarness.svelte  Sidebar.spec.ts  SidebarHarness.svelte  ThemePickerHarness.svelte  ThemePickerTileHarness.svelte  composer-options-geometry.spec.ts  layout.spec.ts  share-fixtures.ts  share-modal.spec.ts  shared-view.spec.ts  theme-picker-tile.spec.ts  theme-picker.spec.ts
rebuild/frontend/tests/e2e/: auth-locals.spec.ts  auth-required.spec.ts  cancel-mid-stream.spec.ts  history-crud.spec.ts  reload-persistence.spec.ts  revoke.spec.ts  rotation.spec.ts  send-and-stream.spec.ts  share-and-read.spec.ts  smoke.spec.ts  theme-cross-tab.spec.ts  theme-explicit-persists.spec.ts  theme-fouc.spec.ts  theme-os-default.spec.ts  theme-public-share.spec.ts  visual-m1.spec.ts  visual-m2.spec.ts  visual-m3.spec.ts
rebuild/frontend/tests/unit/: api-client.test.ts  historyTree.test.ts  markdown.test.ts  parseSSE.test.ts
rebuild/infra/: docker-compose.yml
rebuild/infra/agent-platform/: Dockerfile  README.md  pyproject.toml
rebuild/infra/agent-platform/app/: agents.py  config.py  main.py  oai_models.py  oai_router.py
rebuild/infra/agent-platform/tests/: conftest.py  test_agents.py  test_oai_models.py  test_oai_router_chat.py  test_oai_router_models.py  test_oai_router_nonstream.py  test_seed_history.py  test_smoke_compose.py
rebuild/infra/mysql/: init.sql  my.cnf
rebuild/plans/: CONSISTENCY_REPORT.md  FASTAPI_AUDIT.md  FastAPI-best-practises.md  MYSQL_FEATURE_AUDIT.md  database-best-practises.md  m0-foundations.md  m1-conversations.md  m2-sharing.md  m3-channels.md  m4-automations.md  m5-hardening.md  svelte-best-practises.md  sveltekit-best-practises.md
(+144 files in other folders)
